# LATROP-Uni-PwAG

./: CMakeLists.txt  Makefile  README.md  main  main.cpp  windows-toolchain.cmake
.github/workflows/: create_release.yml
TEST/: Makefile
docs/: CONTROLS.md  START.md
docs/report/: LATROP_RAPORT_FINALNY_PWAG.docx  OPIS_KODU.md  OPIS_KODU_2.md
src/: box.hpp  main.cpp  main.hpp  map.cpp  map.hpp  player.cpp  player.hpp  portal.cpp  portal.hpp  resources.cpp  resources.hpp  shot.cpp  shot.hpp  windows.hpp
src/maps/: 2.map  3.map  4.map
